--- a/CodeNoob/src/app/components/bienvenida/bienvenida.component.html
+++ b/CodeNoob/src/app/components/bienvenida/bienvenida.component.html
@@ -19,7 +19,7 @@
                                 lenguajes que existen.</p>
                             <div>
                                 <a href="#about"
-                                    class="btn-get-started animate__animated animate__fadeInUp scrollto">Leer Mas</a>
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto">Empieza Aqui</a>
                             </div>
                         </div>
                     </div>
