--- a/CodeNoob/src/app/components/navbar/navbar.component.html
+++ b/CodeNoob/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="">Home</a></li>
-          <li><a class="nav-link scrollto" href="">Login</a></li>
+          <li><a class="nav-link scrollto" href="/eleccionRegistro" routerLinkActive="active" routerLink="/eleccionRegistro">Registrarse</a></li>
           <li><a class="nav-link scrollto" href="#">A</a></li>
           <li><a class="nav-link scrollto " href="">B</a></li>
           <li><a class="nav-link scrollto" href="">C</a></li>
@@ -31,7 +31,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">E</a></li>
-          <li><a class="getstarted scrollto" href="#about">Inicia sesion</a></li>
+          <li><a class="getstarted scrollto" routerLinkActive="active" href="/eleccionLogin" routerLink="/eleccionLogin">Inicia sesion</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
