Login y registros faltantes

--- a/CodeNoob/src/app/components/eleccion-registro/eleccion-registro.component.html
+++ b/CodeNoob/src/app/components/eleccion-registro/eleccion-registro.component.html
@@ -87,7 +87,7 @@
               <p>
                 Registra tu cuenta con el rol de profesor.
               </p>
-              <button type="button" class="read_more_btn" href="/loginProfesor" routerLink="/loginProfesor">Registrarse</button>
+              <button type="button" class="read_more_btn" href="/registrarProfe" routerLink="/registrarProfe">Registrarse</button>
             </div>
           </div>
           <div class="solution_card">
@@ -170,7 +170,7 @@
               <p>
                 Registra tu cuenta con el rol de alumno.
               </p>
-              <button type="button" class="read_more_btn"  href="/loginAlumno" routerLink="/loginAlumno">Registrarse</button>
+              <button type="button" class="read_more_btn"  href="/registraAlumno" routerLink="/registraAlumno">Registrarse</button>
             </div>
           </div>
         </div>
