--- a/CodeNoob/src/app/components/login-alumno/login-alumno.component.html
+++ b/CodeNoob/src/app/components/login-alumno/login-alumno.component.html
@@ -9,15 +9,17 @@
   <form class="p-3 mt-3">
       <div class="form-field d-flex align-items-center">
           <span class="far fa-user"></span>
-          <input type="text" name="userName" id="userName" placeholder="Username">
+          <input type="text" name="userName" id="userName" placeholder="Username" #userName="ngModel"
+          [(ngModel)]="alumnoModelo.nombreUsuario">
       </div>
       <div class="form-field d-flex align-items-center">
           <span class="fas fa-key"></span>
-          <input type="password" name="password" id="pwd" placeholder="Password">
+          <input type="password" name="password" id="pwd" placeholder="Password" #password="ngModel"
+          [(ngModel)]="alumnoModelo.password">
       </div>
-      <button class="btn mt-3">Login</button>
+      <button class="btn mt-3" (click)="loginAlumno()">Login</button>
   </form>
   <div class="text-center fs-6">
-      <a href="#">Forget password?</a> or <a href="#">Sign up</a>
+      <a href="#">No tienes cuenta?</a> or <a href="/eleccionRegistro">Registrate</a>
   </div>
 </div>
