--- a/CodeNoob/src/app/components/login-profesor/login-profesor.component.html
+++ b/CodeNoob/src/app/components/login-profesor/login-profesor.component.html
@@ -20,6 +20,6 @@
       <button class="btn mt-3" (click)="loginProfe()">Login</button>
   </form>
   <div class="text-center fs-6">
-      <a href="#">Forget password?</a> or <a href="#">Sign up</a>
+    <a href="#">No tienes cuenta?</a> or <a href="/eleccionRegistro">Registrate</a>
   </div>
 </div>
