--- a/CodeNoob/src/app/components/registro-profesor/registro-profesor.component.html
+++ b/CodeNoob/src/app/components/registro-profesor/registro-profesor.component.html
@@ -10,22 +10,22 @@
 			<div class="col-md-8 col-xs-12 col-sm-12 login_form ">
 				<div class="container-fluid">
 					<div class="row">
-						<h2>Registro Alumno</h2>
+						<h2>Registro Profesor</h2>
 					</div>
 					<div class="row">
 						<form control="" class="form-group">
 							<div class="row">
-								<input type="text" name="nombreUsuario" id="nombreUsuario" class="form__input" placeholder="nombreUsuario" #nombreUsuario="ngModel" [(ngModel)]="alumnoModel.nombreUsuario">
+								<input type="text" name="nombreProfe" id="nombreProfe" class="form__input" placeholder="nombreProfe" #nombreProfe="ngModel" [(ngModel)]="profesorModel.nombreProfe">
 							</div>
               <div class="row">
-								<input type="text" name="email" id="email" class="form__input" placeholder="email" #email="ngModel" [(ngModel)]="alumnoModel.email">
+								<input type="text" name="email" id="email" class="form__input" placeholder="email" #email="ngModel" [(ngModel)]="profesorModel.email">
 							</div>
 							<div class="row">
 								<!-- <span class="fa fa-lock"></span> -->
-								<input type="password" name="password" id="password" class="form__input" placeholder="Password" #password="ngModel" [(ngModel)]="alumnoModel.password">
+								<input type="password" name="password" id="password" class="form__input" placeholder="Password" #password="ngModel" [(ngModel)]="profesorModel.password">
 							</div>
 							<div class="row">
-								<input type="submit" value="Submit" class="btn" (click)="registrarAlumno()">
+								<input type="submit" value="Submit" class="btn" (click)="registrarProfe()">
 							</div>
 						</form>
 					</div>
