--- a/CodeNoob/src/app/components/navbar/navbar.component.html
+++ b/CodeNoob/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="">Home</a></li>
+          <li><a class="nav-link scrollto active" href="/bienvenida">Home</a></li>
           <li><a class="nav-link scrollto" href="/eleccionRegistro" routerLinkActive="active" routerLink="/eleccionRegistro">Registrarse</a></li>
           <li><a class="nav-link scrollto" href="#">A</a></li>
           <li><a class="nav-link scrollto " href="">B</a></li>
