--- a/CodeNoob/src/app/components/navbar/navbar.component.html
+++ b/CodeNoob/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="/bienvenida">Home</a></li>
           <li><a class="nav-link scrollto" href="/eleccionRegistro" routerLinkActive="active" routerLink="/eleccionRegistro">Registrarse</a></li>
-          <li><a class="nav-link scrollto" href="#">A</a></li>
+          <li><a class="nav-link scrollto" routerLink="/cursos" routerLinkActive="active">Cursos</a></li>
           <li><a class="nav-link scrollto " href="">B</a></li>
           <li><a class="nav-link scrollto" href="">C</a></li>
           <li class="dropdown"><a href="#"><span>D</span> <i class="bi bi-chevron-down"></i></a>
