--- a/CodeNoob/src/app/components/bienvenida/bienvenida.component.scss
+++ b/CodeNoob/src/app/components/bienvenida/bienvenida.component.scss
@@ -5,21 +5,21 @@ body {
     font-family: "Open Sans", sans-serif;
     color: #444444;
   }
-  
+
   a {
     color: #533e85;
     text-decoration: none;
   }
-  
+
   a:hover {
     color: #533e85;
     text-decoration: none;
   }
-  
+
   h1, h2, h3, h4, h5, h6 {
-    font-family: "Roboto", sans-serif;
+    font-family: Verdana, sans-serif;
   }
-  
+
   /*--------------------------------------------------------------
   # Back to top button
   --------------------------------------------------------------*/
@@ -49,8 +49,8 @@ body {
     visibility: visible;
     opacity: 1;
   }
-  
-  
+
+
   /*--------------------------------------------------------------
   # Header
   --------------------------------------------------------------*/
@@ -192,7 +192,7 @@ body {
     background: #5c9f24;
   }
   #hero .btn-get-started {
-    font-family: "Roboto", sans-serif;
+    font-family: Verdana, sans-serif;
     font-weight: 400;
     font-size: 14px;
     letter-spacing: 1px;
@@ -234,11 +234,11 @@ body {
 section {
     padding: 60px 0;
   }
-  
+
   .section-bg {
     background-color: #f1f1f1;
   }
-  
+
   .section-title {
     text-align: center;
     padding-bottom: 30px;
