--- a/CodeNoob/src/app/components/eleccion-login/eleccion-login.component.scss
+++ b/CodeNoob/src/app/components/eleccion-login/eleccion-login.component.scss
@@ -4,11 +4,11 @@
 
 .titulo{
   text-align: center;
-  font-family: "Roboto", sans-serif;
+  font-family: Verdana, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: Verdana, sans-serif;
 }
 
 .our_solution_category {
