--- a/CodeNoob/src/app/components/navbar/navbar.component.scss
+++ b/CodeNoob/src/app/components/navbar/navbar.component.scss
@@ -17,7 +17,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: Verdana, sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
+* Desktop Navigation
 */
 .navbar {
   padding: 0;
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   justify-content: space-between;
   padding: 0 4px;
-  font-family: "Roboto", sans-serif;
+  font-family: Verdana, sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: rgba(255, 255, 255, 0.7);
