--- a/CodeNoob/src/app/components/cursos/cursos.component.html
+++ b/CodeNoob/src/app/components/cursos/cursos.component.html
@@ -24,8 +24,12 @@
                  class="float-end price-hp">12354.00&euro;</span> </div> -->
             <h4 class="card-title text-center" style="font-size: 30px;">{{curso.nombreCurso}}</h4>
             <p class="card-text text-justify">{{curso.descripcion}}</p>
-            <div class="text-center my-4" *ngIf="_cursosService.obtenerIdentidad().rol==='ROL_ALUMNO'"> <a href="#"
-                class="btn btn-success">Asignarse</a></div>
+
+            <div class="text-center my-4" *ngIf="_cursosService.obtenerIdentidad().rol==='ROL_ALUMNO'"> <a 
+              class="btn btn-success" data-bs-toggle="offcanvas" data-bs-toggle="modal" data-bs-target="#AsignacionModal" 
+              (click)="asignacion(curso.nombreCurso)">Asignarse</a></div>
+
+
             <div class="text-center my-4" *ngIf="_cursosService.obtenerIdentidad().rol==='ROL_PROFESOR'">
               <a class="btn btn-warning m-1" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
                 aria-controls="offcanvasExample" (click)="obtenerCursoId(curso._id)">Editar</a>
