--- a/CodeNoob/src/app/components/cursos/cursos.component.scss
+++ b/CodeNoob/src/app/components/cursos/cursos.component.scss
@@ -54,7 +54,7 @@ h2 {
 }
 
 .card:hover {
-  background: #66a7c5fb;
+  background: #84d4fcfb;
   transform: scale(1.05);
   box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06)
 }
@@ -153,14 +153,14 @@ h2 {
   border: none;
   text-decoration: none;
   outline: 0;
-  box-shadow: -1px 6px 19px rgba(247, 129, 10, 0.25);
+  box-shadow: -1px 6px 19px rgba(247, 77, 10, 0.363);
   border-radius: 100px
 }
 
 .btn-danger:hover {
-  background: none #ff2b2bf1;
+  background: none #dd1b1be0;
   color: #ffffff;
-  box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35)
+  box-shadow: -1px 6px 13px rgba(253, 60, 2, 0.39)
 }
 
 .btn-success {
@@ -170,14 +170,31 @@ h2 {
   border: none;
   text-decoration: none;
   outline: 0;
-  box-shadow: -1px 6px 19px rgba(247, 129, 10, 0.25);
+  box-shadow: -1px 6px 19px rgba(77, 247, 10, 0.205);
   border-radius: 100px
 }
 
 .btn-success:hover {
   background: none #19ad3e;
   color: #ffffff;
-  box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35)
+  box-shadow: -1px 6px 13px rgba(25, 255, 83, 0.288)
+}
+
+.btn-info {
+  background: none #0a7b8f;
+  color: #ffffff;
+  fill: #ffffff;
+  border: none;
+  text-decoration: none;
+  outline: 0;
+  box-shadow: -1px 6px 19px rgba(10, 247, 247, 0.25);
+  border-radius: 100px
+}
+
+.btn-info:hover {
+  background: none #05a3be;
+  color: #ffffff;
+  box-shadow: -1px 6px 13px rgba(12, 255, 235, 0.349)
 }
 
 .bg-success {
