--- a/CodeNoob/src/app/components/preguntas/preguntas.component.scss
+++ b/CodeNoob/src/app/components/preguntas/preguntas.component.scss
@@ -9,6 +9,13 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.btn {
+  font-size: 1rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 5px 50px 5px 50px
+}
+
 .agrandar{
   width: 25px;
   height: 25px;
@@ -117,4 +124,72 @@ body {
     margin: 30px 20px;
     padding: 40px 15px 15px 15px;
   }
+}
+
+.btn-warning {
+  background: none #f7810a;
+  color: #ffffff;
+  fill: #ffffff;
+  border: none;
+  text-decoration: none;
+  outline: 0;
+  box-shadow: -1px 6px 19px rgba(247, 129, 10, 0.25);
+  border-radius: 100px
+}
+
+.btn-warning:hover {
+  background: none #ff962b;
+  color: #ffffff;
+  box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35)
+}
+
+.btn-danger {
+  background: none #aa0b00;
+  color: #ffffff;
+  fill: #ffffff;
+  border: none;
+  text-decoration: none;
+  outline: 0;
+  box-shadow: -1px 6px 19px rgba(247, 77, 10, 0.363);
+  border-radius: 100px
+}
+
+.btn-danger:hover {
+  background: none #dd1b1be0;
+  color: #ffffff;
+  box-shadow: -1px 6px 13px rgba(253, 60, 2, 0.39)
+}
+
+.btn-success {
+  background: none #008d3f;
+  color: #ffffff;
+  fill: #ffffff;
+  border: none;
+  text-decoration: none;
+  outline: 0;
+  box-shadow: -1px 6px 19px rgba(77, 247, 10, 0.205);
+  border-radius: 100px
+}
+
+.btn-success:hover {
+  background: none #19ad3e;
+  color: #ffffff;
+  box-shadow: -1px 6px 13px rgba(25, 255, 83, 0.288)
+}
+
+.btn-info {
+  background: none #0a7b8f;
+  color: #ffffff;
+  fill: #ffffff;
+  border: none;
+  text-decoration: none;
+  outline: 0;
+  box-shadow: -1px 6px 19px rgba(10, 247, 247, 0.25);
+  border-radius: 100px
+}
+
+.btn-info:hover {
+  background: none #05a3be;
+  color: #ffffff;
+  box-shadow: -1px 6px 13px rgba(12, 255, 235, 0.349)
 }
