--- a/CodeNoob/src/app/components/editar-pefil-profe/editar-pefil-profe.component.scss
+++ b/CodeNoob/src/app/components/editar-pefil-profe/editar-pefil-profe.component.scss
@@ -22,12 +22,12 @@ background-color: #2bcd72;
 .text-black {
   color: #555555 !important;
 }
-.mb-1, .my-1 {
+/*.mb-1, .my-1 {
   margin-bottom: .25rem!important;
 }
 .mt-1, .my-1 {
   margin-top: .25rem!important;
-}
+}*/
 .h5, h5 {
   font-size: 1.25rem;
 }
