--- a/CodeNoob/src/app/components/bienvenida/bienvenida.component.html
+++ b/CodeNoob/src/app/components/bienvenida/bienvenida.component.html
@@ -19,7 +19,19 @@
                                 lenguajes que existen.</p>
                             <div>
                                 <a href="#about"
-                                    class="btn-get-started animate__animated animate__fadeInUp scrollto">Empieza Aqui</a>
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto" routerLink="/eleccionRegistro">Empieza Aqui</a>
+                                <a href="#about"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolAlumno() === false" routerLink="/loginAlumno">Soy alumno</a>
+                                <a href="#about"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolAlumno() === true" routerLink="/alumno/cursos">Regresar alumno</a>
+                                <a href="#about"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolAlumno() === 1" routerLink="/loginAlumno">Regresar alumno</a>
+                                <a href="#about"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolProfesor() === false" routerLink="/loginAlumno">Soy profesor</a>
+                                <a href="#about"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolProfesor() === true" routerLink="/profesor/cursos">Regresar profesor</a>
+                                <a href="#about"
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolProfesor() === 2" routerLink="/loginProfesor">Regresar profesor</a>
                             </div>
                         </div>
                     </div>
