--- a/CodeNoob/src/app/components/cuestionario/cuestionario.component.html
+++ b/CodeNoob/src/app/components/cuestionario/cuestionario.component.html
@@ -59,7 +59,7 @@
                     Editar
                   </button>
                 </li>
-                <li><button class="btn btn-info m-1 size" [routerLink]="['/preguntas',cuestionario._id]">Preguntas</button></li>
+                <li><button class="btn btn-info m-1 size" [routerLink]="['/profesor/preguntas',cuestionario._id]">Preguntas</button></li>
               </ul>
             </div>
             </div>
