--- a/CodeNoob/src/app/components/bienvenida/bienvenida.component.html
+++ b/CodeNoob/src/app/components/bienvenida/bienvenida.component.html
@@ -27,7 +27,7 @@
                                 <a href="#about"
                                     class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolAlumno() === 1" routerLink="/loginAlumno">Regresar alumno</a>
                                 <a href="#about"
-                                    class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolProfesor() === false" routerLink="/loginAlumno">Soy profesor</a>
+                                    class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolProfesor() === false" routerLink="/loginProfesor">Soy profesor</a>
                                 <a href="#about"
                                     class="btn-get-started animate__animated animate__fadeInUp scrollto" *ngIf="revisarRolProfesor() === true" routerLink="/profesor/cursos">Regresar profesor</a>
                                 <a href="#about"
