--- a/CodeNoob/src/app/components/listar-cursos-asignados/listar-cursos-asignados.component.html
+++ b/CodeNoob/src/app/components/listar-cursos-asignados/listar-cursos-asignados.component.html
@@ -1,13 +1,19 @@
 <br><br><br><br><br>
-<section class="cards" *ngFor="let datos of cursos">
-  <article class="card card--1" class="card card--1" *ngIf="datos.nombreCurso != 'function String() { [native code] }' && datos._id != 'function String() { [native code] }' ">
-    <div class="card__img"></div>
-    <a href="#" class="card_link">
-      <div class="card__img--hover"></div>
-    </a>
-    <div class="card__info">
-      <h3 class="card__title">{{datos.nombreCurso}}</h3>
-      <button class="btn-info" [routerLink]="['/alumno/listarLeccion',datos._id]">Realizar Cuestionario</button>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col col-md-7">
+      <section class="cards mb-5 " *ngFor="let datos of cursos">
+        <article class="card card--1" class="card card--1" *ngIf="datos.nombreCurso != 'function String() { [native code] }' && datos._id != 'function String() { [native code] }' ">
+          <div class="card__img"></div>
+          <a [routerLink]="['/alumno/listarLeccion',datos._id]" class="card_link">
+            <div class="card__img--hover"></div>
+          </a>
+          <div class="card__info">
+            <h3 class="card__title">{{datos.nombreCurso}}</h3>
+            <button class=" btn btn-info" [routerLink]="['/alumno/listarLeccion',datos._id]">Lecciones</button>
+          </div>
+        </article>
+      </section>
     </div>
-  </article>
-</section>
+  </div>
+</div>
