--- a/CodeNoob/src/app/components/lista-lecciones/lista-lecciones.component.html
+++ b/CodeNoob/src/app/components/lista-lecciones/lista-lecciones.component.html
@@ -1,30 +1,38 @@
 <script src="https://use.fontawesome.com/bf66789927.js"></script>
-<br><br><br><br><br><br>
+<br><br> <br> <br>
 
-<table class="listado">
-  <thead>
-    <tr>
-      <th>
-        <h1>No.</h1>
-      </th>
-      <th>
-        <h1>Leccion</h1>
-      </th>
-      <th>
-        <h1>Puntos Leccion</h1>
-      </th>
-      <th>
-        <h1>Opciones</h1>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>U001</td>
-      <td>Juan Carlos Merlos</td>
-      <td>Activo</td>
-      <td class="icono"><a href="#">Hacer ➜</a></td>
-    </tr>
+<!-- nueva card -->
+<div class="container">
+  <div class="row" *ngIf="validation == true">
+    <div class="col col-md-4" *ngFor="let cuestionario  of cuestionarioModelGet ">
+      <div class="card example-1 mb-5" >
+        <div class="wrapper" >
+          <div class="date">
+            <span class="day">No.</span>
+            <span class="month">{{cuestionario.numeroLeccion}}</span>
+          </div>
+          <div class="data">
+            <div class="content">
+              <h1 class="title"><a href="#">{{cuestionario.nombreCuestionario}}</a></h1>
+              <p class="text">
+                Punteo: {{cuestionario.total}}
+              </p>
+              <div>
+                <button class="btn btn-success m-1 size" [routerLink]="['/alumno/resolverCuestionario', cuestionario._id]">Resolver</button>
+              </div>
+            </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-  </tbody>
-</table>
+<section class="container mt-4" *ngIf="validation == false">
+  <div class="alert alert-danger text-center" role="alert">
+    <h4 class="alert-heading">¡Lo sentimos!</h4>
+    <p>Al parecer no hay cuestionarios que visualizar en este momento, ¡Por favor revisa mas tarde!</p>
+    <hr>
+  </div>
+</section>
+
